Crash in [@ mozilla::net::FTPChannelParent::NotifyDiversionFailed]
Categories
(Core :: Networking: FTP, defect, P1)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr60 | --- | unaffected |
firefox-esr68 | --- | unaffected |
firefox67 | --- | unaffected |
firefox68 | --- | unaffected |
firefox69 | --- | unaffected |
firefox70 | + | fixed |
firefox71 | --- | fixed |
People
(Reporter: philipp, Assigned: CuveeHsu)
References
Details
(Keywords: crash, regression, Whiteboard: [necko-triaged])
Crash Data
Attachments
(1 file)
47 bytes,
text/x-phabricator-request
|
lizzard
:
approval-mozilla-beta+
|
Details | Review |
This bug is for crash report bp-abfd111b-ab3a-42cd-8196-dfb580190918.
Top 10 frames of crashing thread:
0 xul.dll void mozilla::net::FTPChannelParent::NotifyDiversionFailed netwerk/protocol/ftp/FTPChannelParent.cpp:784
1 xul.dll nsresult mozilla::net::FTPFailDiversionEvent::Run netwerk/protocol/ftp/FTPChannelParent.cpp:760
2 xul.dll nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1225
3 xul.dll NS_ProcessNextEvent xpcom/threads/nsThreadUtils.cpp:486
4 xul.dll mozilla::ipc::MessagePump::Run ipc/glue/MessagePump.cpp:88
5 xul.dll MessageLoop::RunHandler ipc/chromium/src/base/message_loop.cc:308
6 xul.dll MessageLoop::Run ipc/chromium/src/base/message_loop.cc:290
7 xul.dll nsBaseAppShell::Run widget/nsBaseAppShell.cpp:137
8 xul.dll nsAppShell::Run widget/windows/nsAppShell.cpp:406
9 xul.dll nsresult nsAppStartup::Run toolkit/components/startup/nsAppStartup.cpp:276
these crashes are starting to show up in fairly low volume in the firefox 70 cycle.
and happen with MOZ_RELEASE_ASSERT(mDivertToListener)
from bug 975338. (https://dxr.mozilla.org/mozilla-central/source/netwerk/protocol/ftp/FTPChannelParent.cpp#779).
the first recorded crash occurred on 70.0a1 build 20190819095406, the only submitted user comment so far says: "I clicked on a ftp link, it prompted me to download something, i canceled and then firefox crashed."
Assignee | ||
Comment 1•3 years ago
•
|
||
I can't proceed to reproduce (See bug 1576171 comment 11)
P3 given lower crash rate, but it might be hidden by other crashes.
We wrongly called FailDiversion [1] twice so that the listener is null'ed by the first NotifyDiversionFailed
[1] https://searchfox.org/mozilla-central/rev/153feabebc2d13bb4c29ef8adf104ec1ebd246ae/netwerk/protocol/ftp/FTPChannelParent.cpp#776
The crash volume is pretty significant for beta. Once this gets to 70 release I expect it will be high. Can you take another look? Is it something we could possibly patch next week in beta 13 or 14?
Comment 3•3 years ago
|
||
Changing the priority to p1 as the bug is tracked by a release manager for the current beta.
See What Do You Triage for more information
Updated•3 years ago
|
Assignee | ||
Comment 4•3 years ago
|
||
I can't reproduce (see comment 1).
After a deep look, I'm confident with a patch with bold hypothesis.
It should be a 5 years old bug, revealed by enabling bug 1560699
Assignee | ||
Comment 5•3 years ago
|
||
caller of ResumeForDiversion
should respond for error handling
Pushed by juhsu@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/a9896a6ae8af avoid double failure handling for FTP r=valentin
Comment 7•3 years ago
|
||
bugherder |
Assignee | ||
Comment 8•3 years ago
|
||
FTP is not well unit tested.
Let's uplift to beta after we're sure no major regressions in nightly for days.
Hope it's a lucky punch. Finger crossed.
Assignee | ||
Comment 9•3 years ago
|
||
Comment on attachment 9098408 [details]
Bug 1582966 - avoid double failure handling for FTP
Beta/Release Uplift Approval Request
- User impact if declined: 4-6 crashes per day in beta, expected more in release
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): small change. no major issue in nightly
- String changes made/needed:
Comment on attachment 9098408 [details]
Bug 1582966 - avoid double failure handling for FTP
Crash fix, let's get this lucky punch into beta 13.
![]() |
||
Comment 11•3 years ago
|
||
bugherderuplift |
Assignee | ||
Comment 12•3 years ago
|
||
Beta 13 is going out tomorrow. We have 4-6 crashes a day, which should be observable.
Updated•3 years ago
|
Assignee | ||
Comment 13•3 years ago
|
||
70.0b13 20191007220302 is with the change.
Description
•