Bug 1582966 - avoid double failure handling for FTP r=valentin

Caller of `ResumeForDiversion` should respond for error handling. Otherwise, two `FailDiversion` will be fired, and the latter one is without the listener

Differential Revision: https://phabricator.services.mozilla.com/D47993

--HG--
extra : moz-landing-system : lando